Fixing some styles on mobile

--- a/.vuepress/theme/styles/code.styl
+++ b/.vuepress/theme/styles/code.styl
@@ -1,5 +1,19 @@
 @require './config'
 
+
+.filename
+  background #20232b
+  padding .4rem 1rem .7rem
+  font-size 0.9rem
+  color #fff
+  font-weight 500
+  border-top-left-radius 6px
+  border-top-right-radius 6px
+  margin-bottom -1rem
+  + div[class*="language-"]
+    border-top-left-radius 0px
+    border-top-right-radius 0px
+
 .content__default
   code
     color lighten($textColor, 20%)
