--- a/.vuepress/theme/styles/mobile.styl
+++ b/.vuepress/theme/styles/mobile.styl
@@ -12,6 +12,8 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
 
 // wide mobile
 @media (max-width: $MQMobile)
+  .logo
+    margin-left: -1.25rem;
   .sidebar
     top 0
     padding-top $navbarHeight
@@ -36,3 +38,6 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     div[class*="language-"]
       margin 0.85rem -1.5rem
       border-radius 0
+  .filename
+    margin 0.85rem -1.5rem
+    border-radius 0
