--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -365,20 +365,6 @@ th, td
   display inline-flex
   align-items center
 
-
-.filename
-  background #20232b
-  padding .4rem 1rem .7rem
-  font-size 0.9rem
-  color #fff
-  font-weight 500
-  border-top-left-radius 6px
-  border-top-right-radius 6px
-  margin-bottom -1rem
-  + div[class*="language-"]
-    border-top-left-radius 0px
-    border-top-right-radius 0px
-
 .theme-container
   &.dark
     background $darkBackground
